Fix filter and refresh buttons not being aligned

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,10 @@
     max-width: 100%;
 }
 
+.se-horizontal-layout.center{
+    align-items: center;
+}
+
 .md-card-image {
 	max-height: 150px;	
 }
